- preview website url fixed

--- a/system/views/manage.quote.phtml
+++ b/system/views/manage.quote.phtml
@@ -31,7 +31,7 @@
 				<option value="lost" {{if status == 'lost'}} selected="selected" {{/if}}>Lost</option>
 			</select>
 			<div class="preview grid_2">
-				<a target="_blank" href="http://www.seotoaster2.dev/${id}.html">Preview</a>
+				<a target="_blank" href="<?php echo $this->websiteUrl; ?>${id}.html">Preview</a>
 			</div>
 			<div class="preview grid_1">
 
