--- a/web/css/manage.quote.css
+++ b/web/css/manage.quote.css
@@ -1,15 +1,38 @@
-#quotes {
+table#quotes {
 	background: #fff;
 	padding: 5px 0;
-}
-.quote-item {
-	overflow: hidden;
-	border-bottom: 1px dashed #ccc;
-}
-.quote-item:last-child {
-	border-bottom: none;
+	margin-bottom: 8px;
 }
 
-.quote-item div {
-	padding-top: 4px;
+table#quotes tbody {
+
+}
+
+table#quotes tr {
+	padding: 5px;
+}
+
+table#quotes tr.bordered {
+	border-bottom: 1px dashed #eee;
+}
+
+table#quotes td {
+	padding-top: 5px;
+}
+
+table#quotes tr:nth-child(even) {
+	background: #eee;
+}
+
+table#quotes td.centered {
+	text-align: center;
+}
+
+table#quotes td.nopad {
+	padding: 0;
+}
+
+table#quotes td select {
+	font-size: 12px;
+	padding: 2px;
 }
