--- a/system/views/option.quote.phtml
+++ b/system/views/option.quote.phtml
@@ -1,4 +1,4 @@
 <?php
-	$this->form->setAction($this->websiteUrl . 'plugin/quote/run/quote/');
+	$this->form->setAction($this->websiteUrl . 'plugin/quote/run/quotes/');
 	echo $this->form;
 ?>
