--- a/web/css/add.products.quote.css
+++ b/web/css/add.products.quote.css
@@ -1,3 +1,56 @@
+#products {
+	background: url('../../../../system/images/bg-strip.png');
+	overflow-x: hidden;
+	overflow-y: auto;
+}
 .product-item {
 	overflow: hidden;
+	width: 15.4%;
+	height: 140px;
+	margin: 4px 0.6%;
+	float: left;
+    border: 1px solid #fff;
+    box-shadow: 0 0 4px #BBBBBB;
+    -moz-box-shadow: 0 0 4px #BBBBBB;
+    -webkit-box-shadow: 0 0 4px #BBBBBB;
+    border-radius: 3px;
+    -moz-border-radius: 3px;
+    -webkit-border-radius: 3px;
+    overflow: hidden;
+    position: relative;
+    text-align: center;
+    cursor: pointer;
+    background: #fff;
+    font-size: 9pt;
+}
+.product-item img {
+	max-height: 80px;
+	display: block;
+	margin: 0px auto;
+}
+p.brand {
+    padding: 2px 0px;
+    background-color: lavender;
+    margin-bottom: 1px;
+}
+p.sku{
+    text-align: right;
+    font-size: 8pt;
+    border-top: 1px dotted #ccc;
+    padding: 4px 0px;
+    margin-top: 4px;
+    color: #7C7C7C;
+    position: absolute;
+    bottom: 0px;
+    right: 2px;
+    width: 100%;
+    height: 8pt;
+    overflow: hidden;
+    background-color:#fff;
+}
+
+.btn-add {
+	position: absolute;
+	bottom: 3px;
+	left: 10px;
 }
