--- a/system/views/add.products.quote.phtml
+++ b/system/views/add.products.quote.phtml
@@ -35,7 +35,7 @@
 		<input type="hidden" id="pluginUrl" name="pluginUrl" value="<?php echo trim($this->websiteUrl, ' /').$this->url(array('run'=>''));?>" />
 	    <input type="hidden" id="websiteUrl" name="websiteUrl" value="<?php echo $this->websiteUrl;?>" />
 		<input type="hidden" id="website_url" name="websiteUrl" value="<?php echo $this->websiteUrl;?>" />
-		<div class="seotoaster container_12 h550" id="add-products-quote">
+		<div class="seotoaster container_12 h550 refreshOnClose" id="add-products-quote">
 			<div class="header" style="overflow:hidden;">
 				<div class="closebutton">
 				    <span class="close"><?php echo $this->translate('Close'); ?></span>
