--- a/system/views/settings.quote.phtml
+++ b/system/views/settings.quote.phtml
@@ -21,7 +21,7 @@
 		<input type="hidden" id="pluginUrl" name="pluginUrl" value="<?php echo trim($this->websiteUrl, ' /').$this->url(array('run'=>''));?>" />
 	    <input type="hidden" id="websiteUrl" name="websiteUrl" value="<?php echo $this->websiteUrl;?>" />
 		<input type="hidden" id="website_url" name="websiteUrl" value="<?php echo $this->websiteUrl;?>" />
-		<div class="seotoaster container_12 h550" id="quote-settings-screen">
+		<div class="seotoaster container_12 h360" id="quote-settings-screen">
 			<div class="header" style="overflow:hidden;">
 				<div class="closebutton">
 				    <span class="close"><?php echo $this->translate('Close'); ?></span>
@@ -29,7 +29,7 @@
 				<?php echo $this->translate('Quote settings'); ?>
 			</div>
 			<div id="quote-settings" class="ui-widget-content ui-helper-clearfix h450 grid_12" style="overflow-x: hidden; overflow-y: auto;">
-
+				<?php echo $this->form; ?>
 			</div>
         </div>
 	</body>
