quote plugin updates

--- a/system/views/list.quote.dash.phtml
+++ b/system/views/list.quote.dash.phtml
@@ -118,7 +118,9 @@
             </tr>
 		</tfoot>
 		<tbody>
-
+			<tr>
+		        <td colspan="5" class="text-center"><img src="<?php echo $this->websiteUrl;?>/system/images/loading.gif"/></td>
+			</tr>
 		</tbody>
 	</table>
 </div>
