- quote plugin updates

--- a/system/views/list.quote.dash.phtml
+++ b/system/views/list.quote.dash.phtml
@@ -87,6 +87,7 @@
 ?>
 
 <div class="ui-helper-clearfix" id="manage-quotes">
+	<div><?php echo $this->translate('Search');?>&nbsp;<input type="text" id="quotes-search" name="quotesSearch" placeholder="<?php echo $this->translate('by title');?>" style="width: 200px"/></div>
 	<table id="quotes" style="width: 100%">
 		<thead>
 			<tr class="mb10px">
