--- a/system/views/list.quote.dash.phtml
+++ b/system/views/list.quote.dash.phtml
@@ -87,7 +87,10 @@
 ?>
 
 <div class="ui-helper-clearfix" id="manage-quotes">
-	<div><?php echo $this->translate('Search');?>&nbsp;<input type="text" id="quotes-search" name="quotesSearch" placeholder="<?php echo $this->translate('by title');?>" style="width: 200px"/></div>
+	<div>
+		<?php echo $this->translate('Search');?>&nbsp;<input type="text" id="quotes-search" name="quotesSearch" placeholder="<?php echo $this->translate('by title');?>" style="width: 200px"/>
+		<a href="javascript:;" id="add-new"><?php echo $this->translate('Add new'); ?></a>
+	</div>
 	<table id="quotes" style="width: 100%">
 		<thead>
 			<tr class="mb10px">
